# FloatingPointBitsJS

./: CMakeLists.txt  Example.html  FloatBits.cpp  FloatBits.h  README.md  Tests.html  client.cpp  main.cpp  test.js
